# quant-disparity

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CONSOLIDATED_FINDINGS.md  INDEX.md  LAB_JOURNAL.md  PROPOSAL.md  README.md  RESULTS_PAPER_DRAFT.md  SESSION_STATE_20260111_031439.sh  SESSION_STATE_20260111_050222.sh  STATUS.md  THEORY_DEEP_DIVE.md  VISION.md  theory_validation.json
data/: degradation.json
docs/: CROSS_TRACK_SYNTHESIS.md  LITERATURE_REVIEW.md  RESEARCH_FIT_WIDER.md  RESEARCH_GAPS.md  RESEARCH_SESSION_GUIDE.md  TECHNICAL_WRITEUP.md  friction.md  internal_synthesis.md  israeli_labs_narratives.md  methodology.md  papers.md  research_fit_analysis.md  soudry_lab_analysis.md  soudry_lab_literature_review.md  soudry_lab_narrative.md
experiments/: ASSUMPTIONS_COMMON.md  COLAB_KAGGLE_EXPERIMENTS.md  COMPUTE.md  CPU_ROADMAP.md  CROSS_TRACK_SYNTHESIS.md  EXPERIMENTAL_PLAN.md  EXPERIMENT_REVALUATION.md  EXPERIMENT_STATUS.md  HYPOTHESIS.md  HYPOTHESIS_AUDIT.md  HYPOTHESIS_RECONCILIATION.md  HYPOTHESIS_TRACKER.md  NEXT_STEPS.md  PROMPT_HISTORY.md  PROTOCOL.md  runner.py
gpu-experiments/: README.md  requirements.txt
ledgers/: decisions.md
lib/: __init__.py  laaciq.py  metrics.py
methodology/: PROTOCOLS.md
paper/: PAPER_OUTLINE.md  index.md  research-track-prerequisites.md  soudry-mindset.md  soudry-prerequisites.md
quant-fairness/: README.md  pyproject.toml
quant-fairness/src/quant_fairness/: __init__.py  cli.py  quantize.py  sweep.py
quant-fairness/tests/: test_sweep.py
site/: Gemfile  README.md  _config.yml  experiments.md  index.md  literature.md  (+3 more)
(+428 files in other folders)
