[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quant-fairness"
version = "0.1.0"
description = "Find critical layers for fair multilingual quantization"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Quant Disparity Research"}
]
keywords = ["quantization", "multilingual", "fairness", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.30",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
quant-fairness = "quant_fairness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
